--- a/style.css
+++ b/style.css
@@ -71,11 +71,12 @@ body {
 }
 #bookshelf {
     border: 3px solid black;
-    min-width: 70%;
+    width: 70%;
     min-height: 500px;
     display: flex;
     flex-direction: row;
     background-color: #EDEDED;
+    flex-wrap: wrap;
 }
 .formButtons {
     display: flex;
@@ -99,10 +100,10 @@ body {
 .hidden {
     display: none;
 }
-.card {
+.book {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    border: 3px solid black;
     justify-content: space-between;
     align-items: center;
     width: 175px;
@@ -113,7 +114,7 @@ body {
     padding: 10px;
     background-color: darkkhaki;
 }
-.card h1{
+.book h1{
     font-size: 20px;
 }
 .cardBottom {
@@ -122,12 +123,34 @@ body {
     justify-content: space-between;
     width: 175px;
 }
-.haveRead {
-    display: flex;
+#read {
+    margin: 5px;
 }
-.deleteButton {
+#removeBtn {
     background-color: aqua;
     width: 70px;
+    height: 25px;
+    border-radius: .5rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#isNotRead {
+    background-color: red;
+    width: 70px;
+    color: white;
+    height: 25px;
+    border-radius: .5rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#isRead {
+    background-color: green;
+    width: 70px;
+    color: white;
     height: 25px;
     border-radius: .5rem;
     cursor: pointer;
@@ -146,15 +169,11 @@ body {
     padding-top: 1rem;
 }
 
-.book-del-btn:hover { 
+#removeBtn:hover { 
     cursor: pointer;
     color: rgb(207, 2, 2);
 }
-.read-status {
-    font-size: 0.8em;
-    font-weight: 900;
-    padding-bottom: 1.5rem;
-}
-.read-status:hover {
+#cancel:hover {
     cursor: pointer;
+    color: rgb(207, 2, 2);
 }
